Fixed scrolling and added style to scrollbar

--- a/style.css
+++ b/style.css
@@ -32,8 +32,10 @@ body
 	grid-auto-flow: column;
 	gap: 1em;
 	align-items: center;
-	grid-template-columns: auto auto 1fr auto auto;
+	grid-template-columns: auto auto auto 1fr auto;
 	background-color: rgb(46, 46, 46);
+	box-shadow: 0em 0em 1em rgba(0, 0, 0, 0.356);
+	z-index: 1;
 }
 
 .formula-area
@@ -41,6 +43,13 @@ body
 	position: relative;
 	width: 100%;
 	height: 100%;
+	min-height: 0;
+}
+#scroll-container
+{
+	width: 100%;
+	height: 100%;
+	overflow: auto;
 }
 
 .truth-table.formula-editor
@@ -53,7 +62,7 @@ body
 	overflow: auto;
 	border-radius: 0;
 	border-bottom-right-radius: 0;
-	box-shadow: 0em 1em 1em rgba(0, 0, 0, 0.356);
+	box-shadow: 0em 0em 1em rgba(0, 0, 0, 0.356);
 	transition: transform .3s;
 }
 .truth-table.show
@@ -210,4 +219,23 @@ table td
 .false
 {
 	background-color: rgb(70, 42, 42);
+}
+
+
+
+::-webkit-scrollbar
+{
+  width: 1em;
+}
+::-webkit-scrollbar-track
+{
+  background: hsl(0, 0%, 10%); 
+}
+::-webkit-scrollbar-thumb
+{
+  background: hsl(0, 0%, 25%); 
+}
+::-webkit-scrollbar-thumb:hover
+{
+  background: hsl(0, 0%, 21%); 
 }
